# dinky

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Test.dnk
nodejs/: Tools.js  cli.js  dinky.js
nodejs/renderer/: Bitmap.js  HTML.js
src/: cli.js  dinky.cpp  dinky.hpp  dinky.js
src/common/: Bitmap.cpp  Bitmap.hpp  Tools.cpp  Tools.hpp  Types.cpp  Types.hpp
src/renderer/: Bitmap.cpp  Bitmap.hpp  Image.cpp  bitmap.js
